fixed scrollbar styling

--- a/client/src/components/NavBar/FrontGeneral.css
+++ b/client/src/components/NavBar/FrontGeneral.css
@@ -27,67 +27,5 @@
 }
 
 
-
-.close-btn:hover{
-    color: rgb(100,223,121);
-}
-
- 
-
-
-
-::-webkit-scrollbar{
-    width: 0.7em; 
-    background-color: rgb(34, 33, 33);
-  }
-  
-::-webkit-scrollbar-track{
-    background-color: rgb(48, 134, 45);
-    border-radius: 100vw;  
-}
-
-::-webkit-scrollbar-thumb{
-    background-color: rgb(115, 221, 113);
-    border-radius: 100vw; 
-}
-
-::-webkit-scrollbar-thumb:hover{
-    background: rgb(166, 245, 166);
-    border-radius: 100vw;
-} 
-
-
-.info-block { 
-    background-color: rgb(34, 33, 33);
-    color: white;
-}
- 
-.info-block p {
-    text-align: left
-}
-
-.creators {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    text-align: center;
-}
-.creators li {
-    display: inline-block;
-    min-width: 5em;
-    margin: 0 0.5em;
-}
-
-.info-info {
-    text-align: center; 
-}
-
-.info-info h1, h3{
-    color: rgb(116, 255, 116); 
-}
-
-.info-info h4 {
-    font-weight: 10;
-}
  
 
